css/main.css
/* ... */
.project-item {
  display: flex;
  flex-direction: column;
  text-align: center;
  width: 45%; /* Adjust as needed for the desired spacing between project items */
  margin: 10px;
  padding: 20px;
  border: 1px solid #ddd;
  border-radius: 5px;
  background: #7dce8260;
  transition: transform 0.3s ease; /* Add a smooth transition */
}

/* Add a hover effect to move the project item on hover */
.project-item:hover {
  transform: translateY(-10px); /* Move the item 10 pixels up */
  color: red;
  background-color: pink;
}

.projects h3 {
  margin: 0 auto 20px auto;
}

.projects img {
  box-shadow: 4px 1px 10px 1px rgba(110, 110, 110, 0.2);
  max-width: 100%;
  height: auto;
}
.skills-tools {
  font-size: 1rem; /* Adjust font size as needed */
  margin: 10px 0;
  flex-grow: 1;
  line-height: 15px;
  text-align: left;
}
.project-language {
  margin: 30px 0 10px 0;
}

.project-description {
  font-size: 1rem; /* Adjust font size as needed */
  margin: 10px 0;
  line-height: 15px;
  text-align: left;
}

.project-title {
  font-size: 1.5rem; /* Adjust font size as needed */
  margin: 10px 0;
}

.project-link {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: #007bff;
  color: #fff;
  padding: 8px 16px; /* Adjust padding to your preference */
  border-radius: 4px;
  transition: color 0.3s ease;
  text-decoration: none;
  font-size: 14px; /* Adjust font size to your preference */
  margin: 10px auto; /* Center the link horizontally */
  width: fit-content; /* Only take the necessary width */
}
.project-link:hover {
  color: red; /* Change the text color to red on hover */
  background-color: purple;
}
/* Contact */

.contact {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  margin-left: 50px;
}

.contact-details {
  flex: 2; /* Adjust flex ratio as needed */
  width: 90%;
  margin: 25px auto;
  margin-left: 50px;
}

.contact h2 {
  text-align: left;
  line-height: 97%;
  margin-bottom: 20px;
}

.contact h2 span {
  color: #db8a74;
}

.contact-details .social-icon {
  display: flex;
  align-items: flex-start;
  gap: 10px;
  font-size: 50px;
}

.contact address {
  text-align: left;
  font-size: 1.25em;
  margin-bottom: 10px;
}

.contact address a {
  text-decoration: underline;
  text-decoration-color: #db8a74;
  text-underline-offset: 8px;
}
.contact-image {
  flex: 1; /* Adjust flex ratio as needed */
  margin-left: 5px; /* Add spacing between the image and other elements */
}
.contact-image img {
  max-width: 80%; /* Make the image responsive within its container */
  height: auto; /* Maintain aspect ratio */
  width: auto; /* Allow the image to shrink as needed */
}

/* Mobile Footer */

footer .footer-left {
  display: none;
}

/* ==========================================================================Breakpoints========================================================================== */

/* -------------------- Tablet Styles - Homepage -------------------- */
@media (max-width: 400px) {
  .card .caption {
    display: none;
  }
  .header-right ul {
    white-space: nowrap; /* Prevent items from wrapping */
    overflow-x: auto; /* Add horizontal scrollbar if needed */
    padding-bottom: 10px; /* Add some space at the bottom */
  }

  .header-right li {
    font-size: 14px; /* Resize font size as needed */
    margin-right: 10px; /* Adjust spacing between items */
  }

  .header-left h1,
  .header-right ul {
    font-size: 1em; /* Adjust font size as needed */
  }
  .contact {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column-reverse;
    flex-wrap: wrap;
    align-content: flex-end;
    margin-left: 0%;
  }
  .contact .contact-details {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    text-align: center;
    margin-left: 0%;
  }
  .companies p {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
  footer .footer-right ul {
    white-space: nowrap; /* Prevent items from wrapping */
    overflow-x: auto; /* Add horizontal scrollbar if needed */
    padding-bottom: 10px; /* Add some space at the bottom */
  }

  footer .footer-right li {
    font-size: 14px; /* Resize font size as needed */
    margin-right: 10px; /* Adjust spacing between items */
  }
}

@media (max-width: 950px) {
  /* About */
  .about .content-wrapper {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .about .about-me {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .about .statement {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .about-style,
  .avatar {
    width: 100%;
    margin: 0;
  }
}
@media (max-width: 768px) {
  .project-item {
    width: 80%; /* Adjust the width as needed */
    margin: 0 auto; /* Center horizontally */
  }
  .header-right li {
    font-size: 14px; /* Reduce the font size for smaller screens */
    margin-right: 5px; /* Adjust spacing for smaller screens */
  }
  .card {
    flex: 1 1 calc(33.33% - 20px); /* To display 3 items per line */
    max-width: calc(33.33% - 20px); /* To display 3 items per line */
  }

  .cardimg {
    max-width: 100%; /* Adjust the width as needed */
    width: 100%; /* Adjust the width as needed */
    height: auto; /* Maintain aspect ratio */
  }

  .contact-image {
    display: none;
  }
}
/* ... */

